@@ -3239,8 +3239,8 @@ const unsigned char _Py_M__importlib[] = {
     0,114,64,1,0,0,114,59,1,0,0,114,96,0,0,0,
     114,56,1,0,0,114,7,0,0,0,114,145,0,0,0,114,
     69,1,0,0,244,11,0,0,0,95,103,99,100,95,105,109,
-    112,111,114,116,114,97,0,0,0,114,46,0,0,0,114,156,
-    0,0,0,114,98,0,0,0,40,5,0,0,0,114,66,0,
+    112,111,114,116,114,97,0,0,0,114,46,0,0,0,114,66,
+    1,0,0,114,98,0,0,0,40,5,0,0,0,114,66,0,
     0,0,114,57,1,0,0,114,58,1,0,0,114,160,0,0,
     0,114,139,0,0,0,114,4,0,0,0,114,4,0,0,0,
     114,5,0,0,0,114,70,1,0,0,61,6,0,0,115,26,
